feat: create validation class and methods

--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,7 @@
             "email": "lukabrazi@redberry.ge"
         }
     ],
-    "require": {}
+    "require": {
+      "ext-pdo": "*"
+    }
 }
